<resources>

    <string name="margin">Weather App</string>
    <string name="TextSize">15dp</string>
    
    <string name="search_hint">Type the city you want to look up</string>
    <string name="current_label">Current</string>
    <string name="wind_label">Wind</string>
    <string name="next_4_days_hourly">Next 7 days</string>
    <string name="sunrise">Sunrise </string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="previous_date">Previous Date</string>
    <string name="current_date">Current Date</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="next_date">Next Date</string>
    <string name="sunset">Sunset </string>
    <string name="zero_label">0%d</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="event">Event</string>
    <string name="delete">Delete</string>
    <string name="alert_me">Alert Me</string>
    <string name="done">Done</string>
    <string name="my_notes">My notes</string>
    <string name="decription">Decription</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="planner">Planner</string>
</resources>